<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_teams"
        android:title="@string/nav_teams"
        tools:menuCategory="container"></item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_rate"
            android:title="@string/nav_rate"
            android:icon="@android:drawable/star_big_on" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/nav_exit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel" />

    </group>
</menu>
