<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always"
        tools:icon="@android:drawable/ic_popup_sync"
        android:icon="@android:drawable/ic_popup_sync" />

    <item
        android:id="@+id/action_change_news"
        android:orderInCategory="100"
        android:title="@string/action_change_news"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
</menu>
